<resources>
    <string name="app_name">TimerApp</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="milli_seconds">:00</string>
    <string name="minute">00</string>
    <string name="seconds">:00</string>
    <string name="email">Please enter email</string>
    <string name="name">Please Enter Name</string>
    <string name="password">Please Enter password</string>
    <string name="content_description">Image Description</string>
    <string name="channel_name">Notification</string>
    <string name="channel_description">About Notification</string>
    <string name="click_on_notification">Click on Notification!</string>
    <string name="signIn">Sign In</string>
</resources>